tests/parsing/smtlib/poly/errors/025_var_binding_bad_name_1.psmt2
(set-logic ALL)
(assert (let ((_ 42)) true))
