tests/parsing/smtlib/poly/errors/025_var_binding_bad_name_1.expected
File "tests/parsing/smtlib/poly/errors/025_var_binding_bad_name_1.psmt2", line 2, character 15-16:
Error while parsing a variable binding, read the reserved word '_',
      but expected a symbol (i.e. variable name).
